--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpthread-stubs (0.3-2) unstable; urgency=low
+
+  * Fix bogus symlink (Closes: #556222)
+
+ -- Julien Danjou <acid@debian.org>  Mon, 16 Nov 2009 09:58:11 +0100
+
 libpthread-stubs (0.3-1) unstable; urgency=low
 
   * New upstream release
