--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libpthread-stubs (0.3-3) UNRELEASED; urgency=low
+libpthread-stubs (0.3-3) unstable; urgency=low
 
   [ Steve Langasek ]
   * Build for multiarch.  Closes: #632555.
@@ -16,7 +16,7 @@ libpthread-stubs (0.3-3) UNRELEASED; urgency=low
   [ Samuel Thibault ]
   * Fix pthread_exit prototype (closes: #622148).
 
- -- Julien Cristau <jcristau@debian.org>  Wed, 09 Nov 2011 21:49:55 +0100
+ -- Julien Cristau <jcristau@debian.org>  Fri, 11 Nov 2011 18:40:41 +0100
 
 libpthread-stubs (0.3-2.1) unstable; urgency=low
 
