--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpthread-stubs (0.3-4) UNRELEASED; urgency=low
+
+  * Stop building libpthread-stubs0{,-udeb} on non-hurd-i386.
+
+ -- Julien Cristau <jcristau@debian.org>  Fri, 11 Nov 2011 23:31:45 +0100
+
 libpthread-stubs (0.3-3) unstable; urgency=low
 
   [ Steve Langasek ]
