--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libpthread-stubs (0.3-4) UNRELEASED; urgency=low
+libpthread-stubs (0.3-4) unstable; urgency=low
 
   * Stop building libpthread-stubs0{,-udeb} (closes: 706865).
 
- -- Julien Cristau <jcristau@debian.org>  Fri, 11 Nov 2011 23:31:45 +0100
+ -- Julien Cristau <jcristau@debian.org>  Sun, 22 Sep 2013 16:58:17 +0200
 
 libpthread-stubs (0.3-3) unstable; urgency=low
 
