Change maintainer to Debian X Strike Force.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libpthread-stubs (0.4-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Change maintainer to Debian X Strike Force.
 
  -- Andreas Boll <aboll@debian.org>  Thu, 07 Feb 2019 23:29:46 +0100
 
