--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ libpthread-stubs (0.4-1) UNRELEASED; urgency=medium
   * Update Vcs-* URLs to point to salsa.debian.org.
   * Bump debhelper compat to 11.
   * Set source format to 1.0.
+  * Switch URLs to https.
 
  -- Andreas Boll <aboll@debian.org>  Thu, 07 Feb 2019 23:29:46 +0100
 
