--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ libpthread-stubs (0.4-1) UNRELEASED; urgency=medium
   * Bump debhelper compat to 11.
   * Set source format to 1.0.
   * Switch URLs to https.
+  * Bump standards version to 4.3.0.
 
  -- Andreas Boll <aboll@debian.org>  Thu, 07 Feb 2019 23:29:46 +0100
 
